cmake_minimum_required(VERSION 3.23)
project(winter_play C)

set(CMAKE_C_STANDARD 11)


add_executable(client client.c)
add_executable(server server.c)
add_executable(client2 client.c)
link_libraries(ws2_32)
target_link_libraries(server ws2_32)
target_link_libraries(client ws2_32)
target_link_libraries(client SDL2)
target_link_libraries(client SDL2_image)
target_link_libraries(client SDL2_ttf)
target_link_libraries(client SDL2_mixer)
target_link_libraries(server SDL2)
target_link_libraries(server SDL2_image)
target_link_libraries(server SDL2_ttf)
target_link_libraries(server SDL2_mixer)
target_link_libraries(client2 ws2_32)
target_link_libraries(client2 SDL2)
target_link_libraries(client2 SDL2_image)
target_link_libraries(client2 SDL2_ttf)
target_link_libraries(client2 SDL2_mixer)
